# TodoBot

./: .gitignore  README.md  bot.py  bot_primer.py  db.py  pyproject.toml  task.py  todobotfirebase-firebase-adminsdk-npghl-cdadbeff71.json
tests/: conftest.py  test_db.py  test_task.py  test_todobot.py
todobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
